# foto2pdf

./: hello.py  pyproject.toml
foto2pdf/: __init__.py  batch_processor.py  cli.py  file_importer.py  image_processor.py
specs/: concept.md  tasks.md
tests/: __init__.py  test_batch_processor.py  test_cli.py  test_file_importer.py  test_image_processor.py
